# jolpica-f1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TERMS.md  dangerfile.js  formulastat.dbml  gunicorn.conf.py  laps.pkl  manage.py  notebook.ipynb  pyproject.toml  test_data.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/redis/: Dockerfile
.ebextensions/: 00_install_certbot_open_port.config  01_renew_ssl_certificate_cron_job.config  django.config
.github/: FUNDING.yml  ci  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  20_data_correction.yml  30_feature_request.yml  bug_report.md  bug_report.yml  config.yml  data_correction.yml
.github/workflows/: ci.yaml  danger.yaml
.platform/hooks/postdeploy/: 00_get_certificate.sh
docs/: README.md  START-HERE.md  VISUALIZATION_TOOL.md  community_projects.md  database_dumps.md  docs.md  drivers.md  dumps.md  ergast_differences.md  races.md  rate_limits.md  seasons.md
docs/endpoints/: circuits.md  constructorStandings.md  constructors.md  driverStandings.md  drivers.md  laps.md  pitstops.md  qualifying.md  races.md  results.md  seasons.md  sprint.md  status.md
docs/endpoints/data/: dumps.md
docs/v1/: schema_guidelines.md
dump/: import.sql
formulastat/: asgi.py  deployment_utils.py  settings.py  urls.py  views.py  wsgi.py
formulastat/ergast/: admin.py  apps.py  models.py  serializers.py  update.py  urls.py  views.py
formulastat/ergast/migrations/: 0001_initial.py  0002_auto_20210807_1826.py  0003_auto_20210807_1908.py  0004_alter_constructors_constructor_ref.py  0005_auto_20210807_2329.py  0006_auto_20210807_2331.py  0007_auto_20210808_0016.py  0008_auto_20210808_0107.py  0009_auto_20210808_0110.py  0010_auto_20210808_1052.py  0011_alter_pitstops_id.py  0012_auto_20210814_2034.py  0013_alter_drivers_code.py  0014_auto_20230924_2047.py  0015_sprintresults.py
formulastat/ergastapi/: apps.py  pagination.py  serializers.py  urls.py  views.py
formulastat/formula_one/: admin.py  apps.py  import_from_ergast.py  models.dbml  models.py  utils.py
formulastat/formula_one/fixtures/: point_schemes.json
formulastat/formula_one/migrations/: 0001_initial.py  0002_initial.py  0003_championshipscheme_and_more.py
formulastat/formula_one/models/: __init__.py  championship.py  circuit.py  driver.py  lap.py  pit_stop.py  point_scheme.py  race.py  season.py  session.py  team.py
formulastat/formula_one/tests/: test_utils.py
jolpica/: asgi.py  deployment_utils.py  settings.py  urls.py  wsgi.py
jolpica/ergast/: admin.py  apps.py  models.py  serializers.py  update.py  urls.py  views.py
jolpica/ergast/migrations/: 0001_0015_squashed.py  0001_initial.py  0002_remove_races_circuitid_and_more.py  0003_auto_20210807_1908.py  0006_auto_20210807_2331.py  0007_auto_20210808_0016.py  0008_auto_20210808_0107.py  0009_auto_20210808_0110.py  0010_auto_20210808_1052.py  0011_alter_pitstops_id.py  0012_auto_20210814_2034.py  0013_alter_drivers_code.py
jolpica/ergastapi/: apps.py  pagination.py  serializers.py  urls.py  views.py
jolpica/formula_one/: admin.py  apps.py  data_correction.py  generate_standings.py  import_from_ergast.py  models.dbml  standings.py  utils.py
jolpica/formula_one/fixtures/: championship_adjustments.json  championship_schemes.json  championship_systems.json  point_schemes.json  point_systems.json
jolpica/formula_one/import/: deserialisers.py
jolpica/formula_one/importer/: deserialisers.py  importer.py  json_models.py
jolpica/formula_one/imports/: deserialisers.py
jolpica/formula_one/ingest/: parse.py
jolpica/formula_one/migrations/: 0001_0009_squashed.py  0001_initial.py  0001_squash_postgis_dependency.py  0002_alter_session_type.py  (+29 more)
jolpica/formula_one_dump/: __init__.py  admin.py  apps.py  models.py
jolpica/schemas/: data_import.py  pyproject.toml
jolpica/schemas/f1_api/: alpha.py
jolpica/schemas/f1_api/alpha/: __init__.py  circuit.py  driver.py  lap.py  metadata.py  pit_stop.py  round.py  schedule.py  session.py  session_entry.py  team.py
jolpica/schemas/tests/: test_data_import.py
jolpica_api/: asgi.py  deployment_utils.py  logging.py  metrics.py  metrics_mixin.py  settings.py  urls.py  views.py  wsgi.py
jolpica_api/auth/: __init__.py  apps.py  views.py
jolpica_api/authentication/: admin.py  apps.py  throttles.py  urls.py
jolpica_api/data_import/: admin.py  apps.py  models.py  urls.py  views.py
jolpica_api/dumps/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
jolpica_api/ergastapi/: apps.py  pagination.py  ratelimits.py  serializers.py  status_mapping.py  urls.py  views.py
jolpica_api/f1_api/: pagination.py  serializers.py  urls.py  utils.py  views.py
jolpica_api/f1_visualizations/: README.md  __init__.py  apps.py  urls.py
jolpica_api/tests/: test_logging.py
libraries/jolpica-schemas/: README.md  pyproject.toml
libraries/jolpica-schemas/src/jolpica/schemas/f1_api/: __init__.py
libraries/jolpica-schemas/src/jolpica/schemas/f1_api/alpha/: __init__.py  team.py
libraries/jolpica-schemas/src/jolpica_schemas/: data_import.py
libraries/jolpica-schemas/src/jolpica_schemas/f1_api/alpha/: circuit.py  driver.py  lap.py  pit_stop.py  results.py  round.py  schedule.py  schedule_v2.py  season.py  session.py  session_entry.py  shared.py  team.py
libraries/jolpica-schemas/src/jolpica_schemas/f1_api/alpha/core/: circuit.py  driver.py  lap.py  pit_stop.py  round.py  season.py  session.py  session_entry.py  team.py
scripts/: after_dump.sql  before_dump.sql  create_fixtures.sh  dump_data.sh  generate_csv_dump.py  generate_csv_dump.sh  generate_sql_dump.py  restore_from_csv_dump.sh
static/: index.html
tests/: conftest.py  create_data_fixtures.sh  generate_ergast_fixtures.py  get_ergast_responses.py  notebook.ipynb  settings.py  test_ergast.py
tests/fixtures/: drivers.json  fix_auto_increments.sh  import.sql  standings.json  users.json
tests/migrations/: 0001_initial.py
(+352 files in other folders)
