[tool.poetry]
authors = ["jolpica <no-reply@jolpi.ca>"]
description = ""
exclude = ["**/tests"]
name = "jolpica"
packages = [{ include = "jolpica" }]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

Django = "^5.1"
django-environ = "^0.12.0"
django-ratelimit = "^4.1.0"
django-redis = "^5.4.0"
django-rest-knox = "^5.0.2"
django-storages = "^1.14.5"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
psycopg = { extras = ["binary"], version = "^3.1.12" }
requests = "^2.32.3"
uvicorn = "^0.30.5"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"
django-cors-headers = "^4.4.0"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
django-dbml = "^0.10.1"                                                            # Generation of dbml file
django-debug-toolbar = "^5.0.1"
django-stubs = { extras = ["compatible-mypy"], version = "^5.1.3" }
djangorestframework-stubs = { extras = ["compatible-mypy"], version = "^3.15.0" }
mypy = { extras = ["dmypy"], version = "^1.10.0" }
pytest-django = "^4.8.0"
ruff = ">=0.5.6"
pre-commit = "^4.0.1"

[tool.poetry.group.local.dependencies]
# Only for local development e.g. Jupyter notebook
ipykernel = "^6.29.5"
notebook = "^7.0.6"

[tool.poetry.group.import.dependencies]
# Only used in import scripts
pandas = "^2.1.1"
tqdm = "^4.66.3"


[tool.poetry.group.deploy.dependencies]
boto3 = "^1.34.11" # For upload via collectstatic with django-storages

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
exclude = ["tests/*", "^jolpica_api/ergastapi/*"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.12"

[tool.django-stubs]
django_settings_module = "jolpica_api.settings"


[tool.ruff]
extend-exclude = ["**/migrations"]
line-length = 120
src = ["jolpica", "jolpica_api"]
target-version = "py310"

[tool.ruff.lint]
ignore = ["TRY300", "TRY003", "RUF012"]
isort.known-first-party = ["jolpica", "jolpica_api"]
select = [
    "RUF", # Ruff specific
    "I",   # isort - Import sorting
    "S",   # Bandit - Security Report
    "F",   # Pyflakes - Error Checker
    "E",   # Pycodestyle - Style Checker
    "UP",  # Pyupgrade - Update Old Syntax
    "N",   # pep8-naming - Naming Conventions
    "TRY", # Tryceratops - Try Except Checking
]

pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["D", "S", "E501"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = ["--reuse-db"]
