[tool.poetry]
name = "jolpica.schemas"
version = "0.1.0"
description = "Schemas for the jolpica project."
authors = ["Your Name <your.email@example.com>"]

[[tool.poetry.packages]]
include = "../schemas"
from = "."
to = "jolpica/schemas"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
