[project]
name = "jolpica.schemas"
version = "0.1.0"
description = "Schemas for the jolpica project."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12,<3.13"
dependencies = ["pydantic>=2.10.6,<3"]

[dependency-groups]
dev = ["pytest>=7.1.0,<8"]

[tool.hatch.build.targets.sdist]
include = ["./../schemas"]

[tool.hatch.build.targets.wheel]
include = ["./../schemas"]

[tool.hatch.build.targets.wheel.sources]
"./../schemas" = "jolpica/schemas"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
